# ObservatoryX

./: .env.example  README.md  main.py  pyproject.toml
agent/: heuristic.py  llm_agent.py
analysis/: profiler.py
broker/: executor.py  loop.py
data/: features.py  feed.py
instrumentation/: metrics.py  span.py  tracer.py
scheduler/: escalation.py
tests/: test_escalation.py  test_features.py  test_instrumentation.py
