[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-trading-observatory"
version = "0.1.0"
description = "Paper trading observability scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py",
  "ollama",
  "pandas",
  "numpy",
  "scipy",
  "pydantic",
  "httpx",
  "rich",
  "plotly",
  "pytest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
  "agent*",
  "broker*",
  "data*",
  "instrumentation*",
  "scheduler*",
  "backtest*",
  "analysis*",
  "paper*",
  "tests*",
]
